#392 basics of effective value calculation (+ renamed .glyphs, .strokes, .points to .children)

--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -1153,6 +1153,10 @@
                     padding-right: 5px;
                 }
                 
+                .operator-value-effective {
+                    padding: 4px;
+                }
+                
                     .operator-value input {
                         background: transparent;
                         width: 100%;
