--- a/purple-pill/templates/specimen.html
+++ b/purple-pill/templates/specimen.html
@@ -14,8 +14,8 @@
         <!-- Glyph Range -->
         <div id="glyph-range" ng-if="selectedSpecimen.name == 'Glyph Range'">
             <div ng-repeat="sequence in data.sequences">
-                <ul id="specimen-ul-0" class="glyph-range-master glyph-range" ng-style="{'margin-bottom': (fontSize * lineHeight / 2) + 'px'}"  ng-model="master.glyphs" ng-repeat="master in sequence.masters" ng-if="master.display || master.edit[0]">
-                    <li ng-style="{'height': (fontSize * lineHeight) + 'px', 'margin': (fontSize / 5) + 'px'}" ng-repeat="glyph in filteredRangeGlyphs=(master.glyphs | rangeFilter:filterOptions.filter)" class="no-rubberband spec-glyph-box-range"><!--
+                <ul id="specimen-ul-0" class="glyph-range-master glyph-range" ng-style="{'margin-bottom': (fontSize * lineHeight / 2) + 'px'}"  ng-model="master.children" ng-repeat="master in sequence.masters" ng-if="master.display || master.edit[0]">
+                    <li ng-style="{'height': (fontSize * lineHeight) + 'px', 'margin': (fontSize / 5) + 'px'}" ng-repeat="glyph in filteredRangeGlyphs=(master.children | rangeFilter:filterOptions.filter)" class="no-rubberband spec-glyph-box-range"><!--
                         --><glyph id="glyph-spec1-{{$index}}" mastername="{{master.name}}" sequence="{{sequence.id}}" master="{{glyph.id}}" glyph="{{glyph.name}}" ng-style="{'height': fontSize + 'px'}" class="spec-glyph-box catchme unselectable no-rubberband" ng-class="{'master-edit': master.edit[0],'selected-glyph':(glyph.edit && master.edit[0])}"></glyph><!--
                     --></li>
                 </ul>
