--- a/purple-pill/templates/parameters.html
+++ b/purple-pill/templates/parameters.html
@@ -60,18 +60,15 @@
         </div>
     </div>
     
-    <!--
+    <!--   
     <div id="inspector" class="standard-padding">
-        <div class="inspector-header">
-            <span>{{data.projectName}}</span>
-        </div>
         <div ng-repeat="sequence in data.sequences">
             <div class="inspector-branche" style="display: block" ng-repeat="master in sequence.masters"  ng-if="master.edit && master.type != 'test'">
                 <div class="inspector-header">
                     <arrow></arrow>
                     <span ng-class="{'inspector-inactive' : !master.edit[data.viewState]}">{{master.displayName}}</span>
                 </div>
-                <div class="inspector-branche" ng-repeat="glyph in master.glyphs">
+                <div class="inspector-branche" ng-repeat="glyph in master.children" ng-if="glyph.edit">
                     <div class="inspector-header">
                         <arrow></arrow>
                         <span>{{glyph.name}}</span>
