--- a/purple-pill/templates/parameters.html
+++ b/purple-pill/templates/parameters.html
@@ -5,7 +5,7 @@
             <div class="parameters-selection-body">
                 <div ng-repeat="parameter in parameterSelection[level]" class="parameter-row">
                     <div ng-repeat="operator in parameter.operators track by $index">
-                        <div ng-if="operator.name != '->'">
+                        <div ng-if="operator.name != 'effectiveValue'">
                             <div ng-click="openParameterPanel(parameter, $event, level)" class="parameter-key"><span ng-if="$index == 0">{{parameter.name}}</span></div>
                             <div class="parameter-operator" ng-click="openOperatorPanel(parameter, operator, $event, level)">{{operator.name}}</div>
                             <div class="operator-value">
@@ -18,9 +18,9 @@
                                 </span>
                             </div>
                         </div>
-                        <div ng-if="operator.name == '->'">
+                        <div ng-if="operator.name == 'effectiveValue'">
                             <div class="parameter-key"></div>
-                            <div class="parameter-operator">{{operator.name}}</div>
+                            <div class="parameter-operator">-></div>
                             <div class="operator-value operator-value-effective">
                                 <span ng-if="!operator.range">{{operator.low.current}}</span>
                                 <span ng-if="operator.range">{{operator.low.current}} to {{operator.high.current}}</span>
@@ -33,13 +33,12 @@
     </div>
     
 
-
     <div id="parameters-control-panel" ng-if="data.view.parameterOperatorPanel > 0" ng-style="{'top': parameterPanelTop, 'left': parameterPanelLeft}">
         <div id="control-panel-parameters">
             <div ng-repeat="parameter in parameters" ng-class="{'selected': parameter.name == panelParameter.name}" class="control-panel-parameter control-panel-button push-button" ng-click="addParameterToPanel(parameter)">{{parameter.name}}</div>
         </div>
         <div id="control-panel-operators">
-            <div ng-repeat="operator in operators" ng-if="operator.type != 'dontuse'" ng-class="{'selected': operator.name == panelOperator.name}" class="control-panel-operator control-panel-button push-button" ng-click="addOperatorToPanel(operator)">{{operator.name}}</div>
+            <div ng-repeat="operator in operators" ng-if="operator.name != 'effectiveValue'" ng-class="{'selected': operator.name == panelOperator.name}" class="control-panel-operator control-panel-button push-button" ng-click="addOperatorToPanel(operator)">{{operator.name}}</div>
         </div>
         <div class="control-panel-cancel control-panel-button push-button" ng-click="data.view.parameterOperatorPanel = 0">
             Cancel
@@ -54,7 +53,7 @@
     </div>
     
     <div class="single-panel control-panel" ng-if="data.view.operatorPanel.display" ng-style="{'left': data.view.operatorPanel.left + 'px', 'top': data.view.operatorPanel.top + 'px'}">
-        <div ng-repeat="operator in operators" ng-if="operator.type != 'dontuse'" ng-class="{'selected': operator.name == data.view.operatorPanel.selected}" class="control-panel-parameter control-panel-button push-button" ng-click="changeOperator(operator)">{{operator.name}}</div>
+        <div ng-repeat="operator in operators" ng-if="operator.name != 'effectiveValue'" ng-class="{'selected': operator.name == data.view.operatorPanel.selected}" class="control-panel-parameter control-panel-button push-button" ng-click="changeOperator(operator)">{{operator.name}}</div>
         <div class="control-panel-cancel control-panel-button push-button" ng-click="removeOperator()">
             Remove
         </div>
@@ -77,5 +76,5 @@
             </div>
         </div>
     </div>
-    -->
+    -effectiveValue
 </div>
