--- a/v0.3.0/templates/parameters.html
+++ b/v0.3.0/templates/parameters.html
@@ -20,7 +20,7 @@
                         </div>
                         <div ng-if="operator.name == 'effectiveValue'">
                             <div class="parameter-key"></div>
-                            <div class="parameter-operator">-></div>
+                            <div class="parameter-operator effective-icon">&#10171;</div>
                             <div class="operator-value operator-value-effective">
                                 <span ng-if="!operator.range">{{operator.low.current}}</span>
                                 <span ng-if="operator.range">{{operator.low.current}} to {{operator.high.current}}</span>
