--- a/v0.3.0/templates/specimen2.html
+++ b/v0.3.0/templates/specimen2.html
@@ -6,7 +6,7 @@
         <div id="non-glyph-range">
             <ul id="specimen-ul-1">
                 <li ng-repeat="glyph in filteredGlyphs track by glyph.glyphId" ng-style="{'height': getLineHeight(glyph.glyphName) + 'px'}"><!--
-                    --><glyph mastername="{{glyph.master.name}}" sequence="{{glyph.master.sequenceId}}" master="{{glyph.master.masterId}}" glyph="{{glyph.glyphName}}" ng-style="{'height': fontSize + 'px'}" class="spec-glyph-box unselectable"></glyph><!--
+                    --><glyph type="instance" mastername="{{glyph.master.name}}" sequence="{{glyph.master.sequenceId}}" master="{{glyph.master.masterId}}" glyph="{{glyph.glyphName}}" ng-style="{'height': fontSize + 'px'}" class="spec-glyph-box unselectable"></glyph><!--
                 --></li>
             </ul>
         </div>
