--- a/v0.3.0/templates/masters.html
+++ b/v0.3.0/templates/masters.html
@@ -25,7 +25,7 @@
                         <span class="list-view-col" type="master" mastername="{{master.name}}" masterag="{{master.ag}}" ng-model="master.ag" ng-click="toggleDisplay(master)" ng-class="{'selected': master.display}">
                             <ul>
                                 <li ng-repeat="x in master.ag"><!--
-                                --><glyph mastername="{{master.name}}" glyph="{{x}}"></glyph><!--
+                                --><glyph type="master" mastername="{{master.name}}" glyph="{{x}}"></glyph><!--
                                 --></li>
                             </ul>
                         </span>
