--- a/v0.3.0/css/style.css
+++ b/v0.3.0/css/style.css
@@ -36,6 +36,7 @@
 		margin: 0;
 		height: 100%;
 		width: 100%;
+		min-width: 960px;
 		font-family: "seanSansNarrow";
 		font-weight: 700;
 		font-size: 12px;
@@ -153,7 +154,7 @@
 		}
 	
 		#view-buttons {
-		    position: fixed;
+		    position: absolute;
 		    top: 0;
 		    left: calc(50% - 154px);
 			padding-top: 10px;
@@ -1617,7 +1618,7 @@
 
     #layover {
         display: block;
-        position: fixed;
+        position: absolute;
         z-index: 1000;
         left: 0;
         top: 0;
@@ -1684,7 +1685,7 @@
 
      splashscreen {
         display: block;
-        position: fixed;
+        position: absolute;
         border-radius: 6px;
         z-index: 1001;
         left: calc(50% - 400px);
@@ -1738,7 +1739,7 @@
         text-align: center;
         width: 20px;
         height: 20px;
-        position: fixed;
+        position: absolute;
         border-radius: 10px;
         z-index: 1000;
     }
