--- a/app/lib/ui/redPill/app.less
+++ b/app/lib/ui/redPill/app.less
@@ -148,3 +148,38 @@ red-pill .children {
         vertical-align: top;
     }
 }
+
+
+mtk-cps-property-dict{
+    ol::before{
+        content: '{'
+    }
+    ol::after{
+        content: '}'
+    }
+
+    ol {
+        display: inline;
+        list-style: none;
+        padding: 0;
+        font-family: "Ubuntu Mono", monospace;
+        font-size: .9em;
+        li {
+            padding-left: 1em;
+        }
+    }
+}
+
+mtk-cps-property{
+    input[type=text]{
+        background: lightyellow;
+        border: none;
+        padding: 0;
+        font-family: inherit;
+        font-size: inherit;
+    }
+}
+
+mtk-cps-collection > *{
+    padding-left: 1em;
+}
