more robust callculation of drop target index, better drag indicator hangling

--- a/app/lib/ui/redPill/app.less
+++ b/app/lib/ui/redPill/app.less
@@ -195,7 +195,7 @@ mtk-cps-panel {
     mtk-cps-property, mtk-cps-new-property {
         line-height: @line-height; /* this is also hardcoded in the template of the textarea! */
         display: block;
-        margin-bottom: 2px;
+        border-bottom: 2px solid transparent;
 
         input[type=text], textarea, span.display-name, span.display-value {
             vertical-align: top;
