Resolved 404 for moved imgs

--- a/app/lib/ui/metapolator/design-space-panel/design-space-panel.less
+++ b/app/lib/ui/metapolator/design-space-panel/design-space-panel.less
@@ -50,7 +50,7 @@
 
 .design-space {
     height: ~"calc(100% - 30px)";
-    background-image: url('../../img/tile.png');
+    background-image: url('img/tile.png');
     background-repeat: repeat;
 }
 
