--- a/app/lib/ui/metapolator/design-space-panel/control/control.less
+++ b/app/lib/ui/metapolator/design-space-panel/control/control.less
@@ -64,3 +64,27 @@ mtk-control svg {
 .slider-hover-square {
     fill: transparent;
 }
+
+.slider-input-container {
+    position: absolute;
+    z-index: 10;
+}
+
+.slider-input-container input {
+    font-size: 9px;
+    width: 50px;
+    border: 0;
+    color:  @mtk-color-2;
+    background: transparent;
+    text-align: center;
+}
+    
+.slider-input-container input:focus {
+    background: #fff;
+}
+
+.slack-master-select {
+    font-size: 9px;
+    position: absolute;
+    z-index: 10;
+}
