hover css for slider handle

--- a/home/css/style.css
+++ b/home/css/style.css
@@ -258,6 +258,11 @@
     transform-origin: 0 0; 
 }
 
+.slider-handle:hover {
+    stroke: #f85c37;
+    stroke-width: 4;
+}
+
 
 /********* MEDIA **********/
 
